--- a/surf_shelter_multi_label_training_pkg_v0/requirements.txt
+++ b/surf_shelter_multi_label_training_pkg_v0/requirements.txt
@@ -1,25 +1,33 @@
-build==1.2.2.post1
+beautifulsoup4==4.13.3
+black==25.1.0
+cachetools==5.5.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
-docutils==0.21.2
-id==1.5.0
+click==8.1.8
+dnspython==2.7.0
+google-api-core==2.24.1
+google-auth==2.38.0
+google-cloud-core==2.4.2rc0
+google-cloud-storage==3.0.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.67.0
 idna==3.10
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-keyring==25.6.0
-markdown-it-py==3.0.0
-mdurl==0.1.2
-more-itertools==10.6.0
-nh3==0.2.20
+mongoengine==0.29.1
+mypy-extensions==1.0.0
 packaging==24.2
-Pygments==2.19.1
-pyproject_hooks==1.2.0
-readme_renderer==44.0
+pathspec==0.12.1
+platformdirs==4.3.6
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pymongo==4.11.1
 requests==2.32.3
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.9.4
+rsa==4.9
 setuptools==75.8.0
-twine==6.1.0
+six==1.17.0
+soupsieve==2.6
+typing_extensions==4.12.2
 urllib3==2.3.0
+warcio==1.7.5
